--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -4,3 +4,15 @@
     align-items: center;    
     padding: 1em;
 }
+
+.literalSeason {
+    font-size: 14pt;
+    font-weight: bold;
+}
+
+.seasonCombo {
+    font-size: 12pt;
+    border-radius: 10%;
+    width: 90px;
+    text-align: center;
+}
