--- a/src/components/Season/season.css
+++ b/src/components/Season/season.css
@@ -1,3 +1,9 @@
+.root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .literalSeason {
     font-size: 14pt;
     font-weight: bold;
