--- a/src/components/LeaguesList/leagues-list.css
+++ b/src/components/LeaguesList/leagues-list.css
@@ -1,3 +1,19 @@
 .root {
-  margin: 0.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.button {
+  background-color: #01DF74;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+  margin-top: 1em;
+}
+
+.addLeague {
+  text-align: center;
+  font-size: 14pt;
+  font-weight: 900;
 }
