--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,6 +1,5 @@
 .root {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-bottom: 1em;
 }
