--- a/src/components/LeaguesList/leagues-list.css
+++ b/src/components/LeaguesList/leagues-list.css
@@ -5,15 +5,6 @@
 }
 
 .button {
-  background-color: #01DF74;
-  border-radius: 5px;
-  width: 30px;
-  height: 30px;
   margin-top: 1em;
-}
-
-.addLeague {
-  text-align: center;
-  font-size: 14pt;
-  font-weight: 900;
+  cursor: pointer;
 }
