Creados todos los componentes de la app y su funcionamiento. Falta corregir pequeños errores y añadir mejoras.

--- a/src/components/OperationsList/operations-list.css
+++ b/src/components/OperationsList/operations-list.css
@@ -14,12 +14,12 @@
     display: none;
   }
   
-  .showPlayerList {
+  .showOperationList {
     display: flex;
     flex-direction: column;
   }
   
-  .hidePlayerList {
+  .hideOperationList {
     display: none;
   }
   
